feat: upgrade Java 21 → 25 (LTS)
- Maven compiler source/target/release → 25
- Jib base image → eclipse-temurin:25-jre
- CI workflow → java-version 25
- Remove --enable-preview (not used)